syntax = "proto3"; // 指定proto版本

option go_package = ".;protostream"; // 指定go包名 


//protoc -I . proto_stream.proto --go_out=. --go-grpc_out=.
service Greeter {
    rpc GetStream (StreamReqData) returns (stream StreamResData) {}; //stream是关键字表示返回值是流，这一行是服务端流模式
    rpc PutStream (stream StreamReqData) returns (StreamResData) {}; //客户端流模式
    rpc AllStream (stream StreamReqData) returns (stream StreamResData) {}; //双向流模式
    // rpc GetStream (StreamReqData) returns (StreamResData) {}; //简单rpc模式出一个请求，返回一个响应
}

message StreamReqData {
    string data = 1;

}

message StreamResData {
    string data = 1;
}